DQ with spark improvement